# ufo3000

./: .gitignore  Cargo.toml  README.md  copy_to_server.sh  native_compile.sh  native_compile_debug.sh  print.sh  wasm_compile.sh
.cargo/: config
misc_stuff/: Cargo.toml
misc_stuff/src/: bit.rs  lib.rs
projects/: Cargo.toml
projects/cube/: cube_features.rs  main.rs
projects/dummy_example/: dummy_features.rs  main.rs
ufo3000_core/: Cargo.toml
ufo3000_core/src/: buffer.rs  camera.rs  input.rs  lib.rs  logger.rs  misc.rs  render_object.rs  screen.rs  template.rs  texture.rs
