[workspace]
resolver = "2"
members = [
    "ufo3000_core",
    "projects",
    "misc_stuff",
]

[workspace.package]
edition = "2021"
rust-version = "1.65"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["jaankaup <janne.kauppinen4321@gmail.fi>"]
repository = "https://github.com/jaankaup/ufo3000"
exclude = []

[workspace.dependencies.ufo3000]
package = "ufo3000_core"
path = "./ufo3000_core"

[workspace.dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev="13d2c3673c5e32c32baa4b610c01885afdb7601a" }
#wgpu = { git = "https://github.com/gfx-rs/wgpu", rev="df54bc49dce89f4387f20c72072d4a3bd25500aa" }
winit = { version = "0.27" }
bytemuck = { version = "1.4", features = ["derive"] }
log = "0.4"
simple_logger = "1.16.0"
instant = {version = "0.1.12", features = ["wasm-bindgen"]}
pollster = "0.2"
async-executor = "1.0"
cgmath = "0.18"
png = "0.16"

# wasm dependencies
getrandom = { version = "0.2.7", features = ["js"] }
web-sys = "0.3.60"
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
wasm-timer = "0.2.5"
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"
