[workspace]
resolver = "2"
members = [
    "ufo3000_core",
    "projects",
    "misc_stuff",
    "runwasm",
]

[workspace.package]
edition = "2021"
rust-version = "1.65"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["jaankaup <janne.kauppinen4321@gmail.fi>"]
repository = "https://github.com/jaankaup/ufo3000"
exclude = []

[workspace.dependencies.ufo3000]
package = "ufo3000_core"
path = "./ufo3000_core"

[workspace.dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev="4220a42139c7aefd29ddd39727fd535dc7665de6" }
#wgpu = { git = "https://github.com/gfx-rs/wgpu", rev="dd64343f942ff519f980a2adc02fa60f3a7b72a3" }
winit = { version = "0.27.1" }
bytemuck = { version = "1.4", features = ["derive"] }
log = "0.4"
simple_logger = "1.16.0"
instant = {version = "0.1.12", features = ["wasm-bindgen"]}
pollster = "0.2"
async-executor = "1.0"
cgmath = "0.18"
png = "0.16"
cargo-run-wasm = "0.3.2"

# wasm dependencies
getrandom = { version = "0.2.7", features = ["js"] }
web-sys = "0.3.61"
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4.34"
wasm-timer = "0.2.5"
console_error_panic_hook = "0.1.7"
console_log = "0.2"
