[package]
name = "ufo3000-examples"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "The Core"
repository.workspace = true
license.workspace = true

[dependencies.ufo3000]
workspace = true

[dependencies]
log.workspace = true
simple_logger.workspace = true
wgpu.workspace = true
winit.workspace = true

[[example]]
name = "dummy_example"
path = "dummy_example/main.rs"

[[example]]
name = "cube"
path = "cube/main.rs"
