[package]
name = "ufo3000-examples"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "The Core"
repository.workspace = true
license.workspace = true

[dependencies.ufo3000]
workspace = true

[dependencies]
log.workspace = true
simple_logger.workspace = true
wgpu.workspace = true
winit.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
wasm-bindgen-futures.workspace = true
console_error_panic_hook.workspace = true
console_log.workspace = true

[[example]]
name = "dummy_example"
path = "dummy_example/main.rs"

[[example]]
name = "cube"
path = "cube/main.rs"
