[package]
name = "ufo3000_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "The Core"
repository.workspace = true
license.workspace = true

[dependencies]
wgpu.workspace = true
winit.workspace = true
instant.workspace = true
pollster.workspace = true
log.workspace = true
simple_logger.workspace = true
async-executor.workspace = true
cgmath.workspace = true
bytemuck.workspace = true

[lib]
