[package]
name = "ufo3000_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "The Core"
repository.workspace = true
license.workspace = true

[dependencies]
wgpu.workspace = true
winit.workspace = true
instant.workspace = true
pollster.workspace = true
log.workspace = true
simple_logger.workspace = true
async-executor.workspace = true
cgmath.workspace = true
bytemuck.workspace = true
png.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
wasm-bindgen-futures.workspace = true
console_error_panic_hook.workspace = true
console_log.workspace = true

[lib]
